--- a/bed.html
+++ b/bed.html
@@ -17,10 +17,42 @@
 <body background="background.jpg">
   <center>
     <h1 class="btn btn-info heading">Object Detection</h1>
+    <a href="index.html" class="btn" id="back">Back</a>
 <h3 id="status" class="btn btn-danger"></h3>
   </center>
 
-  <script src="main.js"></script>
+  <script>
+status="";
+function preload()
+{
+img = loadImage("https://images.unsplash.com/photo-1505693416388-ac5ce068fe85?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8YmVkfGVufDB8fDB8fA%3D%3D&w=1000&q=80");
+}
+function setup()
+{
+canvas = createCanvas(640,420);
+canvas.center();
+objectDetector=ml5.objectDetector("cocossd",modelloaded);
+document.getElementById("status").innerHTML="Status: Detecting Objects";
+}
+function draw()
+{
+image(img,0,0,640,420);
+}
+function modelloaded()
+{
+console.log("Model Is Loaded");
+status=true;
+objectDetector.detect(img,gotresults);
+}
+function gotresults(error,results)
+{
+if(error)
+{
+console.error(error);
+}
+console.log(results);
+}
+  </script>
 
 </body>
 </html>
