--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@ Object Detection
 </h2>
 <br>
 <br>
-<a href="" class="btn">Bed</a>
+<a href="bed.html" class="btn">Bed</a>
 <br>
 <br>
-<a href="" class="btn">TV And AC</a>
+<a href="tv.html" class="btn">TV And AC</a>
 <br>
 <br>
-<a href="" class="btn">Desk</a>
+<a href="desk.html" class="btn">Desk</a>
 <br>
 <br>
-<a href="" class="btn">Bottles</a>
+<a href="bottle.html" class="btn">Bottles</a>
 <br>
 <br>
-<a href="" class="btn">Fruit Basket</a>
+<a href="fruit.html" class="btn">Fruit Basket</a>
 <br>
 <br>
 </center>
